--- a/pubs.html
+++ b/pubs.html
@@ -1,6 +1,8 @@
 <html>
   <title>Publications</title>
 
+  <center><h1>Publications</h1></center>
+  
   <p><a href="https://github.com/TicomCybertek/Zines-Cybertek">Cybertek</a></p>
 
   <p><a href="https://github.com/TicomCybertek/Zines-Dystonaut">Dystonaut</a></p>
