--- a/pubs.html
+++ b/pubs.html
@@ -1,7 +1,7 @@
 <html>
   <title>Publications</title>
 
-  <center><h1>Publications</h1></center>
+  <p><center><h1>Publications</h1></center></p>
   
   <p><a href="https://github.com/TicomCybertek/Zines-Cybertek">Cybertek</a></p>
 
